--- a/reflect/pom.xml
+++ b/reflect/pom.xml
@@ -2,16 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>java-tutorial</artifactId>
+        <groupId>cn.itweknow</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.itweknow</groupId>
-    <artifactId>java-tutorial</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>stream</module>
-        <module>reflect</module>
-    </modules>
+    <artifactId>reflect</artifactId>
 
 
 </project>
